kubernetes-configs/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: dev
spec:
  rules:
    - host: dev.hexa-backenders.com
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-dev
                port:
                  number: 8080
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: mysql-dev
                port:
                  number: 3306
